--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,27 @@ authx==1.4.3
 bcrypt==4.1.2
 certifi==2025.10.5
 cffi==2.0.0
+cfgv==3.5.0
 charset-normalizer==3.4.3
 click==8.3.0
 cryptography==46.0.2
+distlib==0.4.0
 ecdsa==0.19.1
 fastapi==0.118.0
+filelock==3.20.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+identify==2.6.15
 idna==3.10
 iniconfig==2.1.0
 itsdangerous==2.2.0
+nodeenv==1.9.1
 packaging==25.0
 passlib==1.7.4
+platformdirs==4.5.0
 pluggy==1.6.0
+pre_commit==4.4.0
 pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.11.9
@@ -24,10 +33,13 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
 pytest==8.4.2
+pytest-asyncio==1.2.0
+pytest-mock==3.15.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
 pytz==2025.2
+PyYAML==6.0.3
 requests==2.32.5
 rsa==4.9.1
 six==1.17.0
@@ -37,3 +49,4 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.37.0
+virtualenv==20.35.4
